[tool.poetry]
name = "maup-fuzzer"
version = "0.1.0"
description = ""
authors = ["Max Fan <root@max.fan>"]

[tool.poetry.dependencies]
python = "^3.9"
maup = "1.0.2"
Shapely = "1.8a1"
pytest = "^6.2.4"
matplotlib = "^3.4.2"
gerrychain = "^0.2.17"
typer = "^0.3.2"
tblib = "^1.7.0"

[tool.poetry.dev-dependencies]
jupyterlab = "3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
